tests/diagnostics/snapshots/test_three_line_span.txt
Error: Can't compare apples with oranges (at <unknown>:1:5)
  | 
1 | apple.compare(
  |      ^^^^^^^^^
  | ...
3 | ) == EQUAL
  | ^ Comparison attempted here